# protalko-server

./: Cargo.toml  dev.Dockerfile  docker-compose.yaml  schema.yaml
crates/protalko-domain/: Cargo.toml
crates/protalko-domain/src/: entities.rs  lib.rs  repositories.rs  value_objects.rs
crates/protalko-domain/src/entities/: channel.rs  community.rs  community_member.rs  message.rs  user.rs
crates/protalko-domain/src/repositories/: channel.rs  community.rs  community_member.rs  message.rs  user.rs
crates/protalko-domain/src/value_objects/: error.rs  response_status.rs
crates/protalko-infrastructure/: Cargo.toml
crates/protalko-infrastructure/src/: lib.rs  shared.rs  user.rs
crates/protalko-presentation/: Cargo.toml
crates/protalko-presentation/src/: config.rs  lib.rs  main.rs  modules.rs  routes.rs
crates/protalko-presentation/src/models/: error.rs  user.rs
crates/protalko-presentation/src/routes/: health.rs  user.rs
crates/protalko-use-case/: Cargo.toml
crates/protalko-use-case/src/: user.rs
crates/protalko-use-case/src/user/: operations.rs
migrations/: 20250519141836_users.sql
