[workspace]
members = [
  "crates/protalko-presentation",
  "crates/protalko-domain",
  "crates/protalko-infrastructure",
  "crates/protalko-use-case"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
axum = "0.8.4"
tokio = { version = "1.45.0", features = [ "full" ]}
serde = { version = "1.0.219", features = ["derive"] }
getset = "0.1.5"
uuid = "1.16.0"
chrono = "0.4.41"
