[package]
name = "protalko-presentation"
version.workspace = true
edition.workspace = true

[dependencies]
protalko-domain = { path = "../protalko-domain"}
protalko-use-case = { path = "../protalko-use-case"}
protalko-infrastructure = { path = "../protalko-infrastructure"}
tokio.workspace = true
axum.workspace = true
dotenvy.workspace = true
uuid.workspace = true
thiserror.workspace = true
serde.workspace = true
utoipa.workspace = true
